--- a/allcar01.html
+++ b/allcar01.html
@@ -22,6 +22,8 @@
   </head>
 
   <body>
+    
+
     <!-- 優惠標題 -->
     <div class="navboxs pt-lg-4 pt-3">
       <div class="mainboxs w990 mb-3">
@@ -30,7 +32,7 @@
             <div class="modusTitile">
               <div class="modusTitileboxs">
                 <div class="fs-5 mb-1">美福線上購物</div>
-                <div class="fs-4 text-primary">01. 單券單店-單獨提供</div>
+                <div class="fs-5 text-primary">01. 單券單店-單獨提供</div>
               </div>
             </div>
           </div>
@@ -45,18 +47,18 @@
     <main class="mainboxs w990 mt-lg-5 mt-3">
       <div class="container-fluid px-lg-0 px-3">
         <div class="row">
-          <div class="col-12 mb-4"><img src="images/pic04.png" class="img-fluid"></div>
+          <div class="col-12 mb-4"><img src="images/pic01.png" class="img-fluid"></div>
           <div class="col-12 mb-4"><div class="limitTitle">僅限【美福線上購物】使用</div></div>
-          <div class="col-lg-6 col-12 mb-4">
+          <div class="col-12 mb-4">
             <p class="modusText mb-1 fs-5"><i class="bi bi-calendar2-event align-baseline me-2"></i>優惠期限：</p>
             <p class="modusTextDetailed f16 ps-4">2023年07月01日至2024年06月30日止</p>
           </div>
-          <div class="col-lg-6 col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-primary align-baseline me-2"></i>適用對象：</p>
+          <div class="col-12 mb-4">
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>適用對象：</p>
             <p class="modusTextDetailed f16 ps-4">Lexus 車主尊榮回饋方案全級別會員。</p>
           </div>
           <div class="col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-primary align-baseline me-2"></i>優惠品項：</p>
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>優惠內容：</p>
             <p class="modusTextDetailed f16 ps-4">
               1. 全館購物滿$2,300輸入優惠碼享好康禮遇：<br>
                    ①「LEXUS230」享免運優惠。<br>
@@ -67,7 +69,7 @@
             </p>
           </div>
           <div class="col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-primary align-baseline me-2"></i>注意事項：</p>
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>注意事項：</p>
             <p class="modusTextDetailed f16 ps-4">
               限 Lexus 會員本人同行消費。<br>
               每桌每次消費，限兌換優惠一份。<br>
@@ -80,10 +82,10 @@
             </p>
           </div>
 
-          <div class="col-12 border-top border-bottom py-3 mb-3">
+          <!-- <div class="col-12 border-top border-bottom py-3 mb-3">
             <a class="badge label-text fs-6 me-2">標籤一</a>
             <a class="badge label-text fs-6">標籤二</a>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -123,35 +125,7 @@
       </div>
     </footer>
 
-    <!-- 登入光箱 -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header memberBoxsTitle text-center">
-            <h5 class="modal-title" id="exampleModalLabel">我的尊榮回饋</h5>
-            <img src="images/decorate.svg">
-          </div>
-
-          <div class="modal-body m-3">
-            <h3>親愛(ANY-8500)車主，您好：</h3>
-            <p class="fs-5 mb-5 pb-5">
-              目前您已登入尊榮回饋系統，若您想使用其他車牌登入查詢優惠，請按下『登出』按鈕，若否則請按下『取消』。
-            </p>
-            <div class="container-fluid overflow-hidden px-0">
-              <div class="row gx-2">
-                <div class="col-6">
-                  <button type="button" class="w-100 btn btn-black" data-bs-dismiss="modal">取 消</button>
-                </div>
-                <div class="col-6">
-                  <button type="button" class="w-100 btn btn-black">登 出</button> 
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
