--- a/modus01.html
+++ b/modus01.html
@@ -131,7 +131,7 @@
             <p class="modusTextDetailed f16 ps-4">Lexus 車主尊榮回饋方案全級別會員。</p>
           </div>
           <div class="col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>優惠品項：</p>
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>優惠內容：</p>
             <p class="modusTextDetailed f16 ps-4">
               1. 全館購物滿$2,300輸入優惠碼享好康禮遇：<br>
                    ①「LEXUS230」享免運優惠。<br>
