--- a/modus02.html
+++ b/modus02.html
@@ -134,7 +134,7 @@
           </div>
 
           <div class="col-12 mb-4">
-            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>優惠品項：</p>
+            <p class="modusText mb-1 fs-5"><i class="fa-solid fa-caret-right text-black-50 align-baseline me-2"></i>優惠內容：</p>
             <p class="modusTextDetailed f16 ps-4">
               1. 全館購物滿$2,300輸入優惠碼享好康禮遇：<br>
                    ①「LEXUS230」享免運優惠。<br>
